ensure content does not overlap with header

--- a/css/style.css
+++ b/css/style.css
@@ -98,4 +98,7 @@ h1 {
 
 #content {
     font-size: 24px;
+    max-height: 700px;
+    overflow: auto;
 }
+
